--- a/tensorflow.tex
+++ b/tensorflow.tex
@@ -98,12 +98,12 @@ Ein Quellknoten muss die Ausführung abgeschlossen haben, bevor der darauf Warte
 
 \subsection{Datenfluss Programmierung}
 
-In traditionellen Programmierparadigmen, wie dem Sequenziellen, Prozeduralen oder Imperativen, werden eine Reihe von Operationen definiert welche in einer speziellen Reihenfolge abgearbeitet werden sollen, wie von Neumann beschrieben. 
-TensorFlow wird nicht im traditionellen verwendet sonder im Sinne eines Datenflusses. 
+In traditionellen Programmierparadigmen, wie dem Sequenziellen, Prozeduralen oder Imperativen, werden eine Reihe von Operationen definiert, welche in einer speziellen Reihenfolge abgearbeitet werden sollen, wie von Neumann beschrieben. 
+TensorFlow wird nicht im traditionellen verwendet, sondern im Sinne eines Datenflusses. 
 Hierbei werden die Bewegungen von Daten in einem Modell beschrieben. 
 In diesem Modell existieren Operationen mit explizit definierten Ein- und Ausgängen, wobei die Aktion in der Operation für das Modell verborgen bleibt wie eine \glqq black box\grqq. 
 Eine Operation wird ausgeführt sobald alle Eingänge vorhanden und valide sind. 
-Dies Art der Programmierung bietet von sich aus die Möglichkeit der parallelen Ausführung, sowie ein Einfaches verteilen der Berechnungen auf ein dezentrales System. 
+Diese Art der Programmierung bietet von sich aus die Möglichkeit der parallelen Ausführung, sowie ein einfaches Verteilen der Berechnungen auf ein dezentrales System. 
 
 \subsection{Operation}
 
